# PaperClassified

./: .gitignore  .pre-commit-config.yaml  README.md  description.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yaml
baseline/: evaluate_baseline.py  model_tfidf.py  prepare_tfidf.py
conf/: evaluate.yaml  evaluate_baseline.yaml  export_onnx.yaml  hyper_optimization.yaml  prepare.yaml  prepare_tfidf.yaml  scaling_laws.yaml  train.yaml  visualize_optimization.yaml
conf/loss/: default.yaml
conf/model/: default.yaml  tfidf.yaml
conf/scheduler/: cosine.yaml  linear.yaml  none.yaml
src/: __init__.py  data.py  evaluate.py  export_onnx.py  hyper_optimization.py  metrics.py  model.py  prepare.py  train.py  utils.py
